--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -26,6 +26,7 @@
 @import "sections/team-section"
 @import "sections/discover-web3"
 @import "sections/cta-litepaper"
+@import "sections/get-in-touch"
 
 //BLOCKS
 @import "blocks/notepad"
@@ -47,6 +48,7 @@
 //INCLUDES
 @import "includes/button"
 @import "includes/attention"
+@import "includes/inputs/input"
 
 //FORM PARTS
 @import "form-parts/input"
