--- a/resources/sass/blocks/_roadmap.sass
+++ b/resources/sass/blocks/_roadmap.sass
@@ -1,7 +1,15 @@
 .roadmap .roadmap-card
   position: sticky
-  +fluid-type(32px, 60px, 'bottom')
   margin-bottom: 20px
+
+.roadmap .roadmap-card:last-child
+  margin-bottom: 0
+
+@for $i from 1 through 10
+  .roadmap-count-#{$i} .roadmap-card
+    bottom: calc(60px + 20px * #{$i})
+    +mediaSize($small-tablet)
+      bottom: calc(32px + 20px * #{$i})
 
 .roadmap .roadmap-card:first-child
   opacity: 1
@@ -9,11 +17,11 @@
 @for $i from 1 through 10
   .roadmap .roadmap-card:nth-child(#{$i})
     z-index: 10 - $i
-    //transform: translateY($i * 20px)
-//
-//@for $i from 1 through 10
-//  .roadmap .roadmap-card.count-#{$i}
-//    bottom: calc(#{$i} * 20px + 60px)
+    transform: translateY($i * 20px)
+
+@for $i from 1 through 10
+  .roadmap .roadmap-card.count-#{$i}
+    bottom: calc(#{$i} * 20px + 60px)
 
 //.roadmap-box
 //  overflow: hidden
