--- a/resources/sass/cards/_team-member.sass
+++ b/resources/sass/cards/_team-member.sass
@@ -3,12 +3,22 @@
   position: relative
   max-width: 110px
   max-height: 110px
+  +mediaSize($mobile)
+    max-width: 100%
+    max-height: 100%
+    padding: 20px
+    background-color: $tile-bg
+    border: 1px solid $border-color
+    border-radius: 8px
 
 .team-member img
   width: 100%
   height: 100%
   object-fit: cover
   border-radius: 8px
+  +mediaSize($mobile)
+    width: 60px
+    height: 60px
 
 .team-member__content
   position: absolute
@@ -21,6 +31,15 @@
   opacity: 0
   padding: 16px
   pointer-events: none
+  +mediaSize($mobile)
+    position: static
+    margin-top: 16px
+    opacity: 1
+    padding: 0
+    width: auto
+    border-radius: 0
+    background: 0
+    border: 0
 
 .team-member__name
   +fluid-type(18px, 28px)
