--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -211,6 +211,8 @@ section + section
   z-index: -1
   filter: blur(50px)
   pointer-events: none
+  +mediaSize($mobile)
+    display: none
 
 .clip-svg
   position: absolute
