--- a/resources/sass/generic/_mobile-menu.sass
+++ b/resources/sass/generic/_mobile-menu.sass
@@ -52,7 +52,7 @@ header.mobile-menu--show .burger-line3
   overflow: hidden
   //height: 0
   pointer-events: none
-  //will-change: height
+  will-change: opacity
   opacity: 0
   +mediaSize($tablet)
     display: block
