--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -6,6 +6,9 @@
 @import "fonts"
 @import "default"
 
+//LIBS
+@import "~slim-select/dist/slimselect.min.css"
+
 //GENERIC
 @import "generic/header"
 @import "generic/footer"
@@ -34,6 +37,7 @@
 @import "blocks/faq"
 @import "blocks/footer-subscribe"
 @import "blocks/roadmap"
+@import "blocks/get-in-touch-form"
 
 //TILES
 @import "tiles/why-get-tile"
@@ -48,7 +52,10 @@
 //INCLUDES
 @import "includes/button"
 @import "includes/attention"
+@import "includes/big-social-tab"
 @import "includes/inputs/input"
+@import "includes/inputs/select"
+@import "includes/inputs/checkbox"
 
 //FORM PARTS
 @import "form-parts/input"
