--- a/resources/sass/includes/inputs/_select.sass
+++ b/resources/sass/includes/inputs/_select.sass
@@ -19,7 +19,7 @@
 
 .ss-content .ss-list .ss-option
   padding: 12px 20px
-  font-size: 16px
+  +fluid-type(14px, 16px)
   color: $text-color
 
 .ss-content .ss-list .ss-option:last-child
