--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -88,7 +88,7 @@ button
 h1, h2, h3, h4, h5, h6, p
   margin: 0
 
-\:focus:not(.no-outline)
+\:focus:not(.no-outline):not(input)
   outline: 2px dashed $green
 
 \:focus:not(:focus-visible)
