--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -8,11 +8,13 @@
 
 //LIBS
 @import "~slim-select/dist/slimselect.min.css"
+@import "~sweetalert2/dist/sweetalert2.min.css"
 
 //GENERIC
 @import "generic/header"
 @import "generic/footer"
 @import "generic/mobile-menu"
+@import "generic/swal"
 
 //SECTIONS
 @import "sections/hero"
