--- a/resources/sass/includes/inputs/_select.sass
+++ b/resources/sass/includes/inputs/_select.sass
@@ -29,3 +29,13 @@
 .ss-content .ss-list .ss-option.ss-disabled
   background-color: $blue
   color: white
+
+.form-field__select select
+  display: block!important
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  pointer-events: none
+  opacity: 0
