--- a/resources/sass/includes/inputs/_checkbox.sass
+++ b/resources/sass/includes/inputs/_checkbox.sass
@@ -9,10 +9,9 @@
   position: absolute
   left: 0
   top: 0
-  visibility: hidden
   opacity: 0
-  width: 0
-  height: 0
+  width: 100%
+  height: 100%
   pointer-events: none
 
 .form-field__checkbox input:checked + .fake-checkbox
