--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -186,6 +186,7 @@ section + section
 
 .title-animation > *
   display: inline-block
+  will-change: opacity, transform
 
 .grad
   position: fixed
