--- a/resources/sass/generic/_mobile-menu.sass
+++ b/resources/sass/generic/_mobile-menu.sass
@@ -45,7 +45,6 @@ header.mobile-menu--show .burger-line3
   right: 0
   top: 100%
   overflow: hidden
-  //height: 0
   pointer-events: none
   will-change: opacity
   opacity: 0
@@ -108,6 +107,7 @@ header.mobile-menu--show .burger-line3
   font-weight: 500
   color: white
   display: inline-flex
+  will-change: transform
 
 .mobile-menu nav li
   overflow: hidden
