--- a/resources/sass/blocks/_notepad.sass
+++ b/resources/sass/blocks/_notepad.sass
@@ -8,6 +8,7 @@
 
 .notepad-page
   position: relative
+  overflow: hidden
   +fluid-type(32px, 60px, 'padding-top')
   +fluid-type(32px, 60px, 'padding-bottom')
   +fluid-type(20px, 60px, 'padding-left')
