--- a/resources/sass/generic/_header.sass
+++ b/resources/sass/generic/_header.sass
@@ -13,7 +13,7 @@ header
 .header--pinned
   transform: none
   background-color: rgba(35, 39, 51, .3)
-  backdrop-filter: blur(20px)
+  //backdrop-filter: blur(20px)
 
 .mobile-menu--show.header--on-top
   transform: none
