--- a/resources/sass/generic/_mobile-menu.sass
+++ b/resources/sass/generic/_mobile-menu.sass
@@ -77,6 +77,7 @@ header.mobile-menu--show .burger-line3
   pointer-events: none
   +mediaSize($mobile)
     display: none
+    backdrop-filter: none
 
 .mobile-menu--show .mobile-menu
   pointer-events: all
