--- a/resources/sass/generic/_header.sass
+++ b/resources/sass/generic/_header.sass
@@ -63,6 +63,12 @@ footer nav li a
   position: relative
   outline: none
 
+header nav li a:hover,
+footer nav li a:hover,
+header nav li a:focus,
+footer nav li a:focus
+  color: white
+
 header nav li a:hover .icon,
 header nav li a:focus .icon,
 footer nav li a:hover .icon,
