--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -29,7 +29,6 @@ html, body
   overflow-scrolling: revert
   width: 100%
   font-size: $base-fz
-  //background-color: $bg-color
   z-index: 0
 
 a
@@ -278,3 +277,9 @@ section + section
 
 .green
   color: $green
+
+.bold
+  font-weight: 600
+
+.white
+  color: white
