--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -9,12 +9,14 @@
 //LIBS
 @import "~slim-select/dist/slimselect.min.css"
 @import "~sweetalert2/dist/sweetalert2.min.css"
+@import "~nouislider/dist/nouislider.min.css"
 
 //GENERIC
 @import "generic/header"
 @import "generic/footer"
 @import "generic/mobile-menu"
 @import "generic/swal"
+@import "generic/footer-simple"
 
 //SECTIONS
 @import "sections/hero"
@@ -32,6 +34,7 @@
 @import "sections/discover-web3"
 @import "sections/cta-litepaper"
 @import "sections/get-in-touch"
+@import "sections/generate-nft"
 
 //BLOCKS
 @import "blocks/notepad"
@@ -40,6 +43,8 @@
 @import "blocks/footer-subscribe"
 @import "blocks/roadmap"
 @import "blocks/get-in-touch-form"
+@import "blocks/nft-generator"
+@import "blocks/nft-calculator"
 
 //TILES
 @import "tiles/why-get-tile"
