--- a/resources/sass/includes/_button.sass
+++ b/resources/sass/includes/_button.sass
@@ -123,3 +123,33 @@
 .btn-tertiary:focus
   color: $green
 
+.btn-key
+  padding: 12px 20px
+  border-radius: 8px
+  display: inline-flex
+  justify-content: center
+  align-items: center
+  font-weight: 600
+  position: relative
+  transition: transform .2s ease, box-shadow .2s ease
+  box-shadow: 0 4px 0 #0D5257
+
+.btn-key:hover
+  transform: translateY(4px)
+  box-shadow: none
+
+.btn-key .btn-icon
+  width: 1.75em
+  height: 1.75em
+  object-fit: contain
+  margin-right: 12px
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+
+.btn-key--orange
+  background-color: $orange
+  color: white
+  box-shadow: 0 4px 0 #AC5A4C
+
+.btn-key--green
+  background-color: $green
+  color: black
