--- a/resources/sass/blocks/_nft-generator.sass
+++ b/resources/sass/blocks/_nft-generator.sass
@@ -66,13 +66,29 @@
   justify-content: space-between
   align-items: center
 
-.nft-generator__state span:not(.active)
-  display: none
-
-.nft-generator__state
-  padding: 6px 16px
+.nft-generator__state span
+  position: absolute
+  right: 0
+  top: 0
+  opacity: 0
   border-radius: 50px
   background-color: rgba(255,255,255, .04)
+  height: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  padding: 0 12px
+  +fluid-type(14px, 16px)
+
+//.nft-generator__state span.active
+//  opacity: 1
+
+.nft-generator__state
+  position: relative
+  width: 50%
+  height: 36px
+  +mediaSize($mobile)
+    height: 30px
 
 .nft-generator__shuttle
   margin-top: 20px
@@ -84,6 +100,12 @@
   top: 0
   +fluid-type(280px, 456px, 'width')
   +fluid-type(280px, 456px, 'height')
+  max-width: 100%
+  max-height: 100%
+  object-fit: contain
+
+.nft-generator__shuttle > img
+  position: static
 
 .nft-generator__shuttle .skeleton img,
 .nft-generator__shuttle .colored img
